--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Monitor</string>
+    <string name="app_name">看板</string>
     <string name="str_turn_on">緊急停止</string>
     <string name="str_turn_off">重啟電源</string>
     <string name="hello_world">連線狀態:</string>
